infra/configs/base/prometheus-stack/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: prometheus-stack
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.cruznet.io`)
    kind: Rule
    services:
    - name: prometheus-stack-grafana
      kind: Service
      namespace: prometheus-stack
      port: 80
  tls:
    secretName: grafana-cert
